--- a/main.css
+++ b/main.css
@@ -20,11 +20,13 @@ header {
 	padding: 2.08%;
 }
 .map-wrapper {
-	height: 800px;
+	height: 50%;
+	width: 61%;
+	position: fixed;
 }
 
 .map {
-    height: 800px;
+    height: 100%;
     margin: 0 auto;
     padding: 0px;
 }
