--- a/main.css
+++ b/main.css
@@ -15,18 +15,20 @@ header {
 	display: none;
 }
 
+.button-nav {
+	margin: 0 auto;
+}
+
 div.results {
 	border: 2px solid grey;
 	padding: 2.08%;
 	margin-top: 15px;
 }
 .map-wrapper {
-	height: 400px;
+	height: 540px;
 	width: 100%;
 	max-height: 620px;
-	max-width: 540px;
-	min-width: 540px;
-	padding: 1px;
+	padding: 5px;
 }
 
 .map {
@@ -36,10 +38,11 @@ div.results {
 }
 
 .submit-buttons {
-	width: 24%;
+	width: 50%;
 	text-align: center;
 	margin: 0 auto;
 	min-width: 136px;
+	margin-bottom: 5px;
 }
 
 .page-nav {
@@ -50,10 +53,13 @@ div.results {
 
 .search-wrapper {
 	margin: 0 auto;
-	position: relative;
-	right: 25%;
+	text-align: center;
 	width: 33.333%;
 	min-width: 260px;
+}
+
+#search {
+	width: 66.666%;
 }
 
 .results-button {
@@ -62,8 +68,11 @@ div.results {
 }
 
 .nav {
-	margin: 0 auto;
 	width: 20%;
+}
+
+.nav-wrapper {
+	margin: 0 auto;
 	text-align: center;
 }
 
