--- a/response-grid.css
+++ b/response-grid.css
@@ -5,7 +5,7 @@
 }
 
 .row {
-	max-width: 1000px;
+	max-width: 1200px;
 	padding-left: 20px;
 	padding-right: 20px;
 	margin: 0 auto;
@@ -45,6 +45,12 @@
 	.map-wrapper {
 		position: fixed;
 	}
+	.submit-buttons {
+		width: 24%;
+	}
+	.search-wrapper {
+		text-align: left;
+	}
 }
 
 @media only screen and (min-width: 1020px) {
@@ -62,6 +68,9 @@
 	}
 	.map-wrapper {
 		position: fixed;
+		max-width: 630px;
+		width: 80%;
+
 	}
 }
 
