add of key features and style changes
-add of state key to hold NY open data api call data
-add of state key to hold geocode data from google api call but not
functional
-add if statement to remove borough from NY open data api call if no
borough selected
-add event listener to initialize map on page load
-add switch function to select map options based on borough selection
-add function to add map markers but not yet functional
-add error message to display if no results are found

--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@ header {
 	text-align: center;
 }
 
+p {
+	margin: 0 auto;
+}
+
 .title {
 	width: 100%;
 }
@@ -29,7 +33,7 @@ div.radios {
 }
 
 div.radio-set {
-	display: block;
+	display: inline-block;
 }
 
 input[type="radio"] {
@@ -37,30 +41,32 @@ input[type="radio"] {
 	text-align: left;
 }
 
+.js-handicap, .js-no-handicap {
+	width: 25px;
+	height: 25px;
+	border-radius: 100%;
+}
+
+.br-results {
+	border: 1px solid grey;
+}
 
 div.results {
 	border: 2px solid grey;
 	padding: 2.08%;
 	margin-top: 15px;
+	height: 100%;
 }
 .map-wrapper {
-	height: 540px;
+	height: 600px;
 	width: 100%;
-	max-height: 620px;
 	padding: 5px;
-	max-width: 760px;
 }
 
 .map {
     height: 100%;
     margin: 0 auto;
     padding: 0px;
-}
-
-.page-nav {
-	padding-right: 10%;
-	padding-left: 10%;
-	margin-bottom: 15px;
 }
 
 .search-wrapper {
@@ -77,15 +83,6 @@ div.results {
 .results-button {
 	width: 100%;
 	margin-bottom: 15px;
-}
-
-.nav {
-	width: 25%;
-}
-
-.nav-wrapper {
-	margin: 0 auto;
-	text-align: center;
 }
 
 .js-result-display {
