Change of key features round two
-remove map
-display of results as tiles
-add additional functions to hide results that are undefined
-change of styling to better suit new result format

--- a/main.css
+++ b/main.css
@@ -11,6 +11,10 @@ p {
 	margin: 0 auto;
 }
 
+h3 {
+	margin: 0 auto;
+}
+
 .title {
 	width: 100%;
 }
@@ -49,6 +53,9 @@ input[type="radio"] {
 
 .br-results {
 	border: 1px solid grey;
+	margin-bottom: 5px;
+	height: 12%;
+	padding: 5px;
 }
 
 div.results {
