--- a/response-grid.css
+++ b/response-grid.css
@@ -25,36 +25,29 @@
 	float: left;
 	padding-left: 1.04166666%;
 	padding-right: 1.04166666%;
+	display: inline-block;
 }
 
 .col-12, .col-4, .col-8 {
 	width: 100%;
 }
 
+@media only screen and (min-width: 620px) {
+	.col-4 {
+		width: 50%;
+	}
+}
+
 @media only screen and (min-width: 1020px) {
 	.col-4 {
-		width: 41.666%;
+		width: 33.333%;
 	}
-
-	.col-8 {
-		width: 58.333%;
-		height: 620px;
-	}
-
 	.col-12 {
 		width: 100%;
-	}
-	.map-wrapper {
-		width: 100%;
-		height: 1000px;
-
 	}
 	div.radio-set {
 	display: block;
 }
 }
 
-@media only screen and (min-height: 375px) {
-
-}
 
