--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ div.radios {
 	text-align: center;
 }
 
+span {
+	display: inline-block;
+}
+
 div.radio-set {
 	display: inline-block;
 }
@@ -63,17 +67,6 @@ div.results {
 	padding: 2.08%;
 	margin-top: 15px;
 	height: 100%;
-}
-.map-wrapper {
-	height: 600px;
-	width: 100%;
-	padding: 5px;
-}
-
-.map {
-    height: 100%;
-    margin: 0 auto;
-    padding: 0px;
 }
 
 .search-wrapper {
