--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ h3 {
 	margin: 0 auto;
 }
 
+a {
+	text-decoration: none;
+}
+
 .title {
 	width: 100%;
 }
@@ -83,6 +87,7 @@ div.results {
 
 .br-results {
 	border: 2px ridge grey;
+	border-radius: 3%;
 	margin-bottom: 5px;
 	padding: 10px;
 	height: 250px;
@@ -95,6 +100,7 @@ div.results {
 
 .js-link {
 	border: 1px outset black;
+	border-radius: 3%;
 	padding: 5px;
 	box-shadow: 2px 2px 2px black;
 }
