--- a/main.css
+++ b/main.css
@@ -102,6 +102,7 @@ div.results {
 	border: 1px outset black;
 	border-radius: 3%;
 	padding: 5px;
+	margin-top: 20px;
 	box-shadow: 2px 2px 2px black;
 }
 
