--- a/main.css
+++ b/main.css
@@ -3,13 +3,24 @@ html {
 }
 
 header {
+	margin-top: 25px;
 	text-align: center;
+	color: seashell;
+	tran
 }
 
 body {
-	background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("images/nyc-stock-photo.jpg"), radial-gradient(white 0%, white 100%);
+	background: url("images/nyc-stock-photo.jpg");
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-color: aliceblue;
+	background-position: center;
+}
+
+.darken {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/nyc-stock-photo.jpg");
+	height: 100%;
+	width: 100%;
 }
 
 p {
@@ -36,6 +47,7 @@ fieldset {
 	width: 100%;
 	margin: 0 auto;
 	text-align: center;
+	color: seashell;
 }
 
 div.radios {
@@ -129,4 +141,16 @@ button.js-prev, button.js-next {
 	margin: 0 auto;
 	text-align: center;
 	width: 25%;
+}
+
+.important {
+	background-color: red;
+	font-weight: bold;
+}
+
+.js-br-location {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow-x: hidden;
+	height: 18px;
 }
