--- a/response-grid.css
+++ b/response-grid.css
@@ -32,16 +32,17 @@
 	width: 100%;
 }
 
-@media only screen and (min-width: 620px) {
+@media only screen and (max-width: 620px) {
 	.col-4 {
-		width: 50%;
+		width: 75%;
+		margin-left: 12.5%;
 	}
 	div.radios {
 		width: 100%;
 	}
 }
 
-@media only screen and (min-width: 1020px) {
+@media only screen and (min-width: 1200px) {
 	.col-4 {
 		width: 33.333%;
 	}
