--- a/main.css
+++ b/main.css
@@ -28,6 +28,10 @@ p {
 	margin: 0 auto;
 }
 
+h1 {
+	margin-bottom: 10px;
+}
+
 h3 {
 	margin: 0 auto;
 }
@@ -69,9 +73,11 @@ div.radio-set {
 input[type="radio"] {
 	margin: 5px 0px 5px 5px;
 	text-align: left;
+	font-size: 120%;
 }
 
 .js-handicap, .js-no-handicap {
+	margin-top: 10px;
 	width: 25px;
 	height: 25px;
 	border-radius: 100%;
@@ -92,7 +98,8 @@ div.results {
 }
 
 #search {
-	width: 66.666%;
+	width: 45%;
+	margin-bottom: 5px;
 }
 
 .js-result-display {
@@ -104,13 +111,13 @@ div.results {
 }
 
 .br-results {
-	border: 2px ridge grey;
-	border-radius: 3%;
+	border: 2px ridge seashell;
 	margin-bottom: 5px;
 	padding: 10px;
 	height: 250px;
 	text-align: center;
-	background-color: seashell;
+	background-color: rgba(5,5,5,0.7);
+	color: seashell;
 	text-overflow: ellipsis;
 	overflow-x: hidden;
 }
@@ -125,11 +132,12 @@ div.results {
 }
 
 .js-link {
-	border: 1px outset black;
+	border: 1px outset seashell;
+	color: seashell;
 	border-radius: 5%;
 	padding: 5px;
 	margin-top: 20px;
-	box-shadow: 2px 2px 2px black;
+	box-shadow: 2px 2px 2px seashell;
 
 }
 
