--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@ header {
 	margin-top: 25px;
 	text-align: center;
 	color: seashell;
-	tran
 }
 
 body {
@@ -29,7 +28,7 @@ p {
 }
 
 h1 {
-	margin-bottom: 10px;
+	padding-bottom: 18px;
 }
 
 h3 {
@@ -98,8 +97,15 @@ div.results {
 }
 
 #search {
-	width: 45%;
+	width: 35%;
 	margin: 10px;
+	background-color: rgba(5,5,5,0.7);
+	color: white;
+}
+
+#search-submit {
+	color: seashell;
+	background-color: rgba(5,5,5,0.7);
 }
 
 .js-result-display {
@@ -118,6 +124,7 @@ div.results {
 	text-align: center;
 	background-color: rgba(5,5,5,0.7);
 	color: seashell;
+	/*handles long locations that spill out of the results tabs*/
 	text-overflow: ellipsis;
 	overflow-x: hidden;
 }
@@ -158,12 +165,12 @@ button.js-prev, button.js-next {
 	text-align: center;
 	width: 25%;
 }
-
+/*to highlight comments*/
 .important {
 	background-color: red;
 	font-weight: bold;
 }
-
+/*handles long locations that spill out of the results tabs*/
 .js-br-location {
 	white-space: nowrap;
 	height: 18px;
