--- a/main.css
+++ b/main.css
@@ -101,11 +101,14 @@ div.results {
 	margin: 10px;
 	background-color: rgba(5,5,5,0.7);
 	color: white;
+	padding: 6px;
+	border: 1px solid seashell
 }
 
 #search-submit {
 	color: seashell;
 	background-color: rgba(5,5,5,0.7);
+	padding: 6px 12px;
 }
 
 .js-result-display {
